Fix doubledigit numbers misalignment in ordered lists (#120)

--- a/_sass/pages/news.scss
+++ b/_sass/pages/news.scss
@@ -66,7 +66,11 @@ em.underline {
 
     &::before {
       position: absolute;
-      left: 0;
+      width: 100%;
+      right: 0.5em;
+      transform: translateX(-100%);
+      text-align: right;
+      font-style: italic;
       counter-increment: order_top_level;
       content: counter(order_top_level)'.';
     }
